# cmake-template

./: .clang-format  .clang-tidy  .editorconfig  .gersemirc  .gitignore  .neocmake.toml  .yamllint.yml  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  default.profraw
.github/: example.yml  requirements-formatting.txt  requirements.txt
.github/pages/: index.html
.github/scripts/: merge_coverage_summary.py  utils.py
.github/workflows/: ci.yml  commitlint.yml  formatting.yml
cmake/: ccache.cmake  clang-tidy.cmake  compile-options.cmake  conan.cmake  coverage.cmake  example.cmake
cmake/coverage/: clang.cmake  cobertura_to_summary.cmake  gcc.cmake  llvm_cov_export.cmake  llvm_cov_to_cobertura.cmake  msvc.cmake
conan/profiles/: ci
example/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/coolgui/: color_panel.hpp  coolgui.hpp  events.hpp  log.hpp  platform.hpp  strong_type.hpp  widget_types.hpp  window.hpp  window_config.hpp  window_traits.hpp  window_types.hpp
lib/include/coolgui/platform/: linux_traits.hpp  macos_traits.hpp  wayland_traits.hpp  windows_traits.hpp  x11_traits.hpp
lib/include/mylib/: log.hpp  mylib.hpp  platform.hpp
lib/src/: mylib.cpp  platform_linux.cpp  platform_macos.cpp  platform_macos.mm  platform_wayland.cpp  platform_windows.cpp  platform_x11.cpp
tests/: CMakeLists.txt  mock_traits.hpp  mylib_test.cpp  test_color_panel.cpp  test_strong_type.cpp  test_widget_types.cpp  test_window.cpp  test_window_config.cpp
